// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppStack prod matches the snapshot 1`] = `
{
  "Outputs": {
    "DeployRoleArn": {
      "Description": "SPS GitHub Actions deploy role ARN",
      "Value": {
        "Fn::GetAtt": [
          "DeployRole885297C3",
          "Arn",
        ],
      },
    },
    "EcrRepoUri": {
      "Description": "SPS ECR repository URI",
      "Value": {
        "Fn::Join": [
          "",
          [
            {
              "Fn::Select": [
                4,
                {
                  "Fn::Split": [
                    ":",
                    {
                      "Fn::GetAtt": [
                        "EcrRepository4D7B3EE1",
                        "Arn",
                      ],
                    },
                  ],
                },
              ],
            },
            ".dkr.ecr.",
            {
              "Fn::Select": [
                3,
                {
                  "Fn::Split": [
                    ":",
                    {
                      "Fn::GetAtt": [
                        "EcrRepository4D7B3EE1",
                        "Arn",
                      ],
                    },
                  ],
                },
              ],
            },
            ".",
            {
              "Ref": "AWS::URLSuffix",
            },
            "/",
            {
              "Ref": "EcrRepository4D7B3EE1",
            },
          ],
        ],
      },
    },
    "EcsAppTaskFamily": {
      "Description": "SPS app task definition family",
      "Value": "sps-app-prod",
    },
    "EcsClusterName": {
      "Description": "SPS ECS cluster name",
      "Value": {
        "Ref": "EcsCluster97242B84",
      },
    },
    "EcsMigrationTaskFamily": {
      "Description": "SPS one-shot prisma migrate deploy task family",
      "Value": "sps-migrate-prod",
    },
    "EcsServiceName": {
      "Description": "SPS ECS service name",
      "Value": {
        "Fn::GetAtt": [
          "EcsService81FC6EF6",
          "Name",
        ],
      },
    },
    "InternalAlbDns": {
      "Description": "SPS internal ALB DNS name (consumed by EtlStack)",
      "Value": {
        "Fn::GetAtt": [
          "InternalAlb58CEEAE8",
          "DNSName",
        ],
      },
    },
    "InternalAlbSecurityGroupId": {
      "Description": "SPS internal ALB security group id (consumed by EtlStack ingress).",
      "Export": {
        "Name": "Sps-App-prod-InternalAlbSecurityGroupId",
      },
      "Value": {
        "Fn::GetAtt": [
          "InternalAlbSecurityGroup32D71C5A",
          "GroupId",
        ],
      },
    },
    "PublicAlbDns": {
      "Description": "SPS public ALB DNS name (consumed by EdgeStack)",
      "Value": {
        "Fn::GetAtt": [
          "PublicAlb84330974",
          "DNSName",
        ],
      },
    },
  },
  "Parameters": {
    "BootstrapVersion": {
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": {
    "AppIngressFromInternalAlb": {
      "Properties": {
        "Description": "Internal ALB to SPS app tasks on container port (prod)",
        "FromPort": 3000,
        "GroupId": {
          "Fn::ImportValue": "Sps-Network-prod:ExportsOutputFnGetAttAppSecurityGroupC396D536GroupId4ECD26A6",
        },
        "IpProtocol": "tcp",
        "SourceSecurityGroupId": {
          "Fn::GetAtt": [
            "InternalAlbSecurityGroup32D71C5A",
            "GroupId",
          ],
        },
        "ToPort": 3000,
      },
      "Type": "AWS::EC2::SecurityGroupIngress",
    },
    "AppIngressFromPublicAlb": {
      "Properties": {
        "Description": "Public ALB to SPS app tasks on container port (prod)",
        "FromPort": 3000,
        "GroupId": {
          "Fn::ImportValue": "Sps-Network-prod:ExportsOutputFnGetAttAppSecurityGroupC396D536GroupId4ECD26A6",
        },
        "IpProtocol": "tcp",
        "SourceSecurityGroupId": {
          "Fn::ImportValue": "Sps-Network-prod:ExportsOutputFnGetAttAlbSecurityGroup86A59E99GroupIdE3A37BC7",
        },
        "ToPort": 3000,
      },
      "Type": "AWS::EC2::SecurityGroupIngress",
    },
    "AppLogGroup7D8CD952": {
      "DeletionPolicy": "Retain",
      "Properties": {
        "LogGroupName": "/aws/ecs/sps-app-prod",
        "RetentionInDays": 90,
      },
      "Type": "AWS::Logs::LogGroup",
      "UpdateReplacePolicy": "Retain",
    },
    "AppTargetGroup3D716DB6": {
      "Properties": {
        "HealthCheckIntervalSeconds": 30,
        "HealthCheckPath": "/api/health",
        "HealthCheckTimeoutSeconds": 5,
        "HealthyThresholdCount": 2,
        "Name": "sps-tg-app-prod",
        "Port": 3000,
        "Protocol": "HTTP",
        "TargetGroupAttributes": [
          {
            "Key": "deregistration_delay.timeout_seconds",
            "Value": "30",
          },
          {
            "Key": "stickiness.enabled",
            "Value": "false",
          },
        ],
        "TargetType": "ip",
        "UnhealthyThresholdCount": 3,
        "VpcId": {
          "Fn::ImportValue": "Sps-Network-prod:ExportsOutputRefVpc8378EB38272D6E3A",
        },
      },
      "Type": "AWS::ElasticLoadBalancingV2::TargetGroup",
    },
    "AppTaskDefinitionCBC902A9": {
      "Properties": {
        "ContainerDefinitions": [
          {
            "Environment": [
              {
                "Name": "NODE_ENV",
                "Value": "production",
              },
              {
                "Name": "PORT",
                "Value": "3000",
              },
              {
                "Name": "OTEL_SERVICE_NAME",
                "Value": "sps-app-prod",
              },
              {
                "Name": "OTEL_EXPORTER_OTLP_ENDPOINT",
                "Value": "http://localhost:4318",
              },
              {
                "Name": "OTEL_PROPAGATORS",
                "Value": "tracecontext,xray",
              },
              {
                "Name": "SPS_ENV",
                "Value": "prod",
              },
            ],
            "Essential": true,
            "Image": {
              "Fn::Join": [
                "",
                [
                  {
                    "Fn::Select": [
                      4,
                      {
                        "Fn::Split": [
                          ":",
                          {
                            "Fn::GetAtt": [
                              "EcrRepository4D7B3EE1",
                              "Arn",
                            ],
                          },
                        ],
                      },
                    ],
                  },
                  ".dkr.ecr.",
                  {
                    "Fn::Select": [
                      3,
                      {
                        "Fn::Split": [
                          ":",
                          {
                            "Fn::GetAtt": [
                              "EcrRepository4D7B3EE1",
                              "Arn",
                            ],
                          },
                        ],
                      },
                    ],
                  },
                  ".",
                  {
                    "Ref": "AWS::URLSuffix",
                  },
                  "/",
                  {
                    "Ref": "EcrRepository4D7B3EE1",
                  },
                  ":latest",
                ],
              ],
            },
            "LogConfiguration": {
              "LogDriver": "awslogs",
              "Options": {
                "awslogs-group": {
                  "Ref": "AppLogGroup7D8CD952",
                },
                "awslogs-region": "us-east-1",
                "awslogs-stream-prefix": "app",
              },
            },
            "Name": "app",
            "PortMappings": [
              {
                "ContainerPort": 3000,
                "Protocol": "tcp",
              },
            ],
            "Secrets": [
              {
                "Name": "DATABASE_URL",
                "ValueFrom": {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":secretsmanager:us-east-1:123456789012:secret:scholars/prod/db/app-rw",
                    ],
                  ],
                },
              },
              {
                "Name": "DATABASE_URL_RO",
                "ValueFrom": {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":secretsmanager:us-east-1:123456789012:secret:scholars/prod/db/app-ro",
                    ],
                  ],
                },
              },
              {
                "Name": "OPENSEARCH_USER",
                "ValueFrom": {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":secretsmanager:us-east-1:123456789012:secret:scholars/prod/opensearch/app:username::",
                    ],
                  ],
                },
              },
              {
                "Name": "OPENSEARCH_PASS",
                "ValueFrom": {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":secretsmanager:us-east-1:123456789012:secret:scholars/prod/opensearch/app:password::",
                    ],
                  ],
                },
              },
              {
                "Name": "REVALIDATE_TOKEN",
                "ValueFrom": {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":secretsmanager:us-east-1:123456789012:secret:scholars/prod/revalidate-token",
                    ],
                  ],
                },
              },
              {
                "Name": "SAML_SP_PRIVATE_KEY",
                "ValueFrom": {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":secretsmanager:us-east-1:123456789012:secret:scholars/saml-sp/prod/private-key",
                    ],
                  ],
                },
              },
            ],
          },
          {
            "Command": [
              "--config=env:AOT_CONFIG_CONTENT",
            ],
            "Environment": [
              {
                "Name": "AOT_CONFIG_CONTENT",
                "Value": "# ADOT collector configuration for SPS app tasks.
#
# Pipeline shape: OTLP/HTTP receiver -> memory_limiter -> tail_sampling ->
# batch -> awsxray exporter. The tail_sampling processor is the load-bearing
# piece -- issue #123's "5% baseline + 100% on errors" cannot be delivered
# by an SDK-side head sampler (NotSampled decisions can't be reversed once
# the span is dropped), so the promotion happens here after the trace has
# ended and its status is known.
#
# Drops happen before the awsxray exporter, so the X-Ray bill tracks the
# kept-trace rate (~5% baseline + every error + every >1500ms trace),
# not the SDK's 100% recording rate.
#
# Tunable in place: edit this file + cdk deploy --exclusively Sps-App-<env>.
# No app-image rebuild required because the file is baked into the
# collector container via the CDK Asset upload pattern (see app-stack.ts).

receivers:
  otlp:
    protocols:
      http:
        endpoint: 0.0.0.0:4318

processors:
  # Drop incoming OTLP if the collector is over a soft memory limit; required
  # in front of tail_sampling because the latter buffers up to num_traces.
  memory_limiter:
    check_interval: 1s
    limit_percentage: 80
    spike_limit_percentage: 25

  tail_sampling:
    decision_wait: 10s
    num_traces: 50000
    policies:
      - name: errors
        type: status_code
        status_code:
          status_codes: [ERROR]
      - name: slow
        type: latency
        latency:
          threshold_ms: 1500
      - name: baseline
        type: probabilistic
        probabilistic:
          sampling_percentage: 5

  batch:
    timeout: 5s
    send_batch_size: 50

exporters:
  awsxray:
    # Region resolved from the ECS task metadata; no need to hard-code.

service:
  pipelines:
    traces:
      receivers: [otlp]
      processors: [memory_limiter, tail_sampling, batch]
      exporters: [awsxray]
",
              },
            ],
            "Essential": false,
            "Image": "public.ecr.aws/aws-observability/aws-otel-collector@sha256:c7e36a5b6ebd0a8d2a9e1f4b6c8d5a7e3b9f2c1d4e6a8b0c2d4e6f8a0b2c4d6e",
            "LogConfiguration": {
              "LogDriver": "awslogs",
              "Options": {
                "awslogs-group": {
                  "Ref": "OtelCollectorLogGroup0FD207F7",
                },
                "awslogs-region": "us-east-1",
                "awslogs-stream-prefix": "otel",
              },
            },
            "Name": "otel-collector",
          },
        ],
        "Cpu": "1024",
        "ExecutionRoleArn": {
          "Fn::GetAtt": [
            "TaskExecutionRole250D2532",
            "Arn",
          ],
        },
        "Family": "sps-app-prod",
        "Memory": "2048",
        "NetworkMode": "awsvpc",
        "RequiresCompatibilities": [
          "FARGATE",
        ],
        "TaskRoleArn": {
          "Fn::GetAtt": [
            "TaskRole30FC0FBB",
            "Arn",
          ],
        },
      },
      "Type": "AWS::ECS::TaskDefinition",
    },
    "CustomAWSCDKOpenIdConnectProviderCustomResourceProviderHandlerF2C543E0": {
      "DependsOn": [
        "CustomAWSCDKOpenIdConnectProviderCustomResourceProviderRole517FED65",
      ],
      "Properties": {
        "Code": {
          "S3Bucket": "cdk-hnb659fds-assets-123456789012-us-east-1",
          "S3Key": "d75c48c9f82cde63e9bf414df335e84e8ac24f11eb34889be255b702aec71e50.zip",
        },
        "Handler": "__entrypoint__.handler",
        "MemorySize": 128,
        "Role": {
          "Fn::GetAtt": [
            "CustomAWSCDKOpenIdConnectProviderCustomResourceProviderRole517FED65",
            "Arn",
          ],
        },
        "Runtime": "nodejs22.x",
        "Timeout": 900,
      },
      "Type": "AWS::Lambda::Function",
    },
    "CustomAWSCDKOpenIdConnectProviderCustomResourceProviderRole517FED65": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Sub": "arn:\${AWS::Partition}:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
          },
        ],
        "Policies": [
          {
            "PolicyDocument": {
              "Statement": [
                {
                  "Action": [
                    "iam:CreateOpenIDConnectProvider",
                    "iam:DeleteOpenIDConnectProvider",
                    "iam:UpdateOpenIDConnectProviderThumbprint",
                    "iam:AddClientIDToOpenIDConnectProvider",
                    "iam:RemoveClientIDFromOpenIDConnectProvider",
                  ],
                  "Effect": "Allow",
                  "Resource": "*",
                },
              ],
              "Version": "2012-10-17",
            },
            "PolicyName": "Inline",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "DeployRole885297C3": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRoleWithWebIdentity",
              "Condition": {
                "StringEquals": {
                  "token.actions.githubusercontent.com:aud": "sts.amazonaws.com",
                },
                "StringLike": {
                  "token.actions.githubusercontent.com:sub": "repo:wcmc-its/Scholars-Profile-System:ref:refs/heads/master",
                },
              },
              "Effect": "Allow",
              "Principal": {
                "Federated": {
                  "Ref": "GithubOidcProviderD8241A88",
                },
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "Description": "SPS GitHub Actions deploy role (prod). Assumed by the deploy workflow via OIDC.",
        "RoleName": "sps-deploy-prod",
      },
      "Type": "AWS::IAM::Role",
    },
    "DeployRoleDefaultPolicyDC930F96": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "ecr:GetAuthorizationToken",
              "Effect": "Allow",
              "Resource": "*",
            },
            {
              "Action": [
                "ecr:BatchCheckLayerAvailability",
                "ecr:CompleteLayerUpload",
                "ecr:InitiateLayerUpload",
                "ecr:PutImage",
                "ecr:UploadLayerPart",
                "ecr:BatchGetImage",
                "ecr:GetDownloadUrlForLayer",
                "ecr:DescribeImages",
                "ecr:DescribeRepositories",
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::GetAtt": [
                  "EcrRepository4D7B3EE1",
                  "Arn",
                ],
              },
            },
            {
              "Action": "ecs:RunTask",
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:",
                    {
                      "Ref": "AWS::Partition",
                    },
                    ":ecs:us-east-1:123456789012:task-definition/sps-migrate-prod:*",
                  ],
                ],
              },
            },
            {
              "Action": [
                "ecs:UpdateService",
                "ecs:DescribeServices",
              ],
              "Effect": "Allow",
              "Resource": {
                "Ref": "EcsService81FC6EF6",
              },
            },
            {
              "Action": [
                "ecs:DescribeTasks",
                "ecs:ListTasks",
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:",
                    {
                      "Ref": "AWS::Partition",
                    },
                    ":ecs:us-east-1:123456789012:task/",
                    {
                      "Ref": "EcsCluster97242B84",
                    },
                    "/*",
                  ],
                ],
              },
            },
            {
              "Action": "iam:PassRole",
              "Condition": {
                "StringEquals": {
                  "iam:PassedToService": "ecs-tasks.amazonaws.com",
                },
              },
              "Effect": "Allow",
              "Resource": [
                {
                  "Fn::GetAtt": [
                    "TaskExecutionRole250D2532",
                    "Arn",
                  ],
                },
                {
                  "Fn::GetAtt": [
                    "TaskRole30FC0FBB",
                    "Arn",
                  ],
                },
              ],
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "DeployRoleDefaultPolicyDC930F96",
        "Roles": [
          {
            "Ref": "DeployRole885297C3",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "EcrRepository4D7B3EE1": {
      "DeletionPolicy": "Retain",
      "Properties": {
        "ImageScanningConfiguration": {
          "ScanOnPush": true,
        },
        "LifecyclePolicy": {
          "LifecyclePolicyText": "{"rules":[{"rulePriority":1,"description":"Keep the last 30 tagged images","selection":{"tagStatus":"tagged","tagPatternList":["*"],"countType":"imageCountMoreThan","countNumber":30},"action":{"type":"expire"}},{"rulePriority":2,"description":"Expire untagged images after 7 days","selection":{"tagStatus":"untagged","countType":"sinceImagePushed","countNumber":7,"countUnit":"days"},"action":{"type":"expire"}}]}",
        },
        "RepositoryName": "scholars-app-prod",
      },
      "Type": "AWS::ECR::Repository",
      "UpdateReplacePolicy": "Retain",
    },
    "EcsCluster97242B84": {
      "Properties": {
        "ClusterName": "sps-cluster-prod",
        "ClusterSettings": [
          {
            "Name": "containerInsights",
            "Value": "enabled",
          },
        ],
      },
      "Type": "AWS::ECS::Cluster",
    },
    "EcsService81FC6EF6": {
      "DependsOn": [
        "AppTargetGroup3D716DB6",
        "InternalAlbInternalHttpListener9436A291",
        "OriginVerifiedForwardC0422D52",
        "PublicAlbPublicHttpListener8CAA0E91",
        "TaskRole30FC0FBB",
      ],
      "Properties": {
        "Cluster": {
          "Ref": "EcsCluster97242B84",
        },
        "DeploymentConfiguration": {
          "Alarms": {
            "AlarmNames": [],
            "Enable": false,
            "Rollback": false,
          },
          "DeploymentCircuitBreaker": {
            "Enable": true,
            "Rollback": true,
          },
          "MaximumPercent": 200,
          "MinimumHealthyPercent": 100,
        },
        "DeploymentController": {
          "Type": "ECS",
        },
        "DesiredCount": 2,
        "EnableECSManagedTags": false,
        "EnableExecuteCommand": false,
        "LaunchType": "FARGATE",
        "LoadBalancers": [
          {
            "ContainerName": "app",
            "ContainerPort": 3000,
            "TargetGroupArn": {
              "Ref": "AppTargetGroup3D716DB6",
            },
          },
        ],
        "NetworkConfiguration": {
          "AwsvpcConfiguration": {
            "AssignPublicIp": "DISABLED",
            "SecurityGroups": [
              {
                "Fn::ImportValue": "Sps-Network-prod:ExportsOutputFnGetAttAppSecurityGroupC396D536GroupId4ECD26A6",
              },
            ],
            "Subnets": [
              {
                "Fn::ImportValue": "Sps-Network-prod:ExportsOutputRefVpcprivateSubnet1SubnetCEAD37168693D373",
              },
              {
                "Fn::ImportValue": "Sps-Network-prod:ExportsOutputRefVpcprivateSubnet2Subnet2DE7549CDF5ACE3D",
              },
            ],
          },
        },
        "ServiceName": "sps-app-prod",
        "TaskDefinition": {
          "Ref": "AppTaskDefinitionCBC902A9",
        },
      },
      "Type": "AWS::ECS::Service",
    },
    "GithubOidcProviderD8241A88": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "ClientIDList": [
          "sts.amazonaws.com",
        ],
        "CodeHash": "d75c48c9f82cde63e9bf414df335e84e8ac24f11eb34889be255b702aec71e50",
        "RejectUnauthorized": false,
        "ServiceToken": {
          "Fn::GetAtt": [
            "CustomAWSCDKOpenIdConnectProviderCustomResourceProviderHandlerF2C543E0",
            "Arn",
          ],
        },
        "Url": "https://token.actions.githubusercontent.com",
      },
      "Type": "Custom::AWSCDKOpenIdConnectProvider",
      "UpdateReplacePolicy": "Delete",
    },
    "InternalAlb58CEEAE8": {
      "Properties": {
        "LoadBalancerAttributes": [
          {
            "Key": "deletion_protection.enabled",
            "Value": "false",
          },
        ],
        "Name": "sps-internal-prod",
        "Scheme": "internal",
        "SecurityGroups": [
          {
            "Fn::GetAtt": [
              "InternalAlbSecurityGroup32D71C5A",
              "GroupId",
            ],
          },
        ],
        "Subnets": [
          {
            "Fn::ImportValue": "Sps-Network-prod:ExportsOutputRefVpcprivateSubnet1SubnetCEAD37168693D373",
          },
          {
            "Fn::ImportValue": "Sps-Network-prod:ExportsOutputRefVpcprivateSubnet2Subnet2DE7549CDF5ACE3D",
          },
        ],
        "Type": "application",
      },
      "Type": "AWS::ElasticLoadBalancingV2::LoadBalancer",
    },
    "InternalAlbInternalHttpListener9436A291": {
      "Properties": {
        "DefaultActions": [
          {
            "TargetGroupArn": {
              "Ref": "AppTargetGroup3D716DB6",
            },
            "Type": "forward",
          },
        ],
        "LoadBalancerArn": {
          "Ref": "InternalAlb58CEEAE8",
        },
        "Port": 80,
        "Protocol": "HTTP",
      },
      "Type": "AWS::ElasticLoadBalancingV2::Listener",
    },
    "InternalAlbSecurityGroup32D71C5A": {
      "Properties": {
        "GroupDescription": "SPS internal ALB (prod) -- intra-VPC /api/revalidate ingress.",
        "SecurityGroupEgress": [
          {
            "CidrIp": "0.0.0.0/0",
            "Description": "Allow all outbound traffic by default",
            "IpProtocol": "-1",
          },
        ],
        "SecurityGroupIngress": [
          {
            "CidrIp": "0.0.0.0/0",
            "Description": "Allow from anyone on port 80",
            "FromPort": 80,
            "IpProtocol": "tcp",
            "ToPort": 80,
          },
        ],
        "VpcId": {
          "Fn::ImportValue": "Sps-Network-prod:ExportsOutputRefVpc8378EB38272D6E3A",
        },
      },
      "Type": "AWS::EC2::SecurityGroup",
    },
    "MigrationLogGroupFD140541": {
      "DeletionPolicy": "Retain",
      "Properties": {
        "LogGroupName": "/aws/ecs/sps-migrate-prod",
        "RetentionInDays": 90,
      },
      "Type": "AWS::Logs::LogGroup",
      "UpdateReplacePolicy": "Retain",
    },
    "MigrationTaskDefinitionE89B136E": {
      "Properties": {
        "ContainerDefinitions": [
          {
            "EntryPoint": [
              "npx",
              "prisma",
              "migrate",
              "deploy",
            ],
            "Essential": true,
            "Image": {
              "Fn::Join": [
                "",
                [
                  {
                    "Fn::Select": [
                      4,
                      {
                        "Fn::Split": [
                          ":",
                          {
                            "Fn::GetAtt": [
                              "EcrRepository4D7B3EE1",
                              "Arn",
                            ],
                          },
                        ],
                      },
                    ],
                  },
                  ".dkr.ecr.",
                  {
                    "Fn::Select": [
                      3,
                      {
                        "Fn::Split": [
                          ":",
                          {
                            "Fn::GetAtt": [
                              "EcrRepository4D7B3EE1",
                              "Arn",
                            ],
                          },
                        ],
                      },
                    ],
                  },
                  ".",
                  {
                    "Ref": "AWS::URLSuffix",
                  },
                  "/",
                  {
                    "Ref": "EcrRepository4D7B3EE1",
                  },
                  ":latest",
                ],
              ],
            },
            "LogConfiguration": {
              "LogDriver": "awslogs",
              "Options": {
                "awslogs-group": {
                  "Ref": "MigrationLogGroupFD140541",
                },
                "awslogs-region": "us-east-1",
                "awslogs-stream-prefix": "migrate",
              },
            },
            "Name": "migrate",
            "Secrets": [
              {
                "Name": "DATABASE_URL",
                "ValueFrom": {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":secretsmanager:us-east-1:123456789012:secret:scholars/prod/db/app-rw",
                    ],
                  ],
                },
              },
            ],
          },
        ],
        "Cpu": "512",
        "ExecutionRoleArn": {
          "Fn::GetAtt": [
            "TaskExecutionRole250D2532",
            "Arn",
          ],
        },
        "Family": "sps-migrate-prod",
        "Memory": "1024",
        "NetworkMode": "awsvpc",
        "RequiresCompatibilities": [
          "FARGATE",
        ],
        "TaskRoleArn": {
          "Fn::GetAtt": [
            "TaskRole30FC0FBB",
            "Arn",
          ],
        },
      },
      "Type": "AWS::ECS::TaskDefinition",
    },
    "OriginVerifiedForwardC0422D52": {
      "Properties": {
        "Actions": [
          {
            "TargetGroupArn": {
              "Ref": "AppTargetGroup3D716DB6",
            },
            "Type": "forward",
          },
        ],
        "Conditions": [
          {
            "Field": "http-header",
            "HttpHeaderConfig": {
              "HttpHeaderName": "X-Origin-Verify",
              "Values": [
                "{{resolve:secretsmanager:scholars/prod/edge/origin-shared-secret:SecretString:::}}",
              ],
            },
          },
        ],
        "ListenerArn": {
          "Ref": "PublicAlbPublicHttpListener8CAA0E91",
        },
        "Priority": 1,
      },
      "Type": "AWS::ElasticLoadBalancingV2::ListenerRule",
    },
    "OtelCollectorLogGroup0FD207F7": {
      "DeletionPolicy": "Retain",
      "Properties": {
        "LogGroupName": "/aws/ecs/sps-otel-prod",
        "RetentionInDays": 90,
      },
      "Type": "AWS::Logs::LogGroup",
      "UpdateReplacePolicy": "Retain",
    },
    "PublicAlb84330974": {
      "Properties": {
        "LoadBalancerAttributes": [
          {
            "Key": "deletion_protection.enabled",
            "Value": "false",
          },
        ],
        "Name": "sps-public-prod",
        "Scheme": "internet-facing",
        "SecurityGroups": [
          {
            "Fn::ImportValue": "Sps-Network-prod:ExportsOutputFnGetAttAlbSecurityGroup86A59E99GroupIdE3A37BC7",
          },
        ],
        "Subnets": [
          {
            "Fn::ImportValue": "Sps-Network-prod:ExportsOutputRefVpcpublicSubnet1Subnet2BB74ED74EB42ADC",
          },
          {
            "Fn::ImportValue": "Sps-Network-prod:ExportsOutputRefVpcpublicSubnet2SubnetE34B022AC8BB6627",
          },
        ],
        "Type": "application",
      },
      "Type": "AWS::ElasticLoadBalancingV2::LoadBalancer",
    },
    "PublicAlbIngressFromInternet": {
      "Properties": {
        "CidrIp": "0.0.0.0/0",
        "Description": "Internet to SPS public ALB HTTP (prod) -- HTTPS lands with EdgeStack",
        "FromPort": 80,
        "GroupId": {
          "Fn::ImportValue": "Sps-Network-prod:ExportsOutputFnGetAttAlbSecurityGroup86A59E99GroupIdE3A37BC7",
        },
        "IpProtocol": "tcp",
        "ToPort": 80,
      },
      "Type": "AWS::EC2::SecurityGroupIngress",
    },
    "PublicAlbPublicHttpListener8CAA0E91": {
      "Properties": {
        "DefaultActions": [
          {
            "FixedResponseConfig": {
              "ContentType": "text/plain",
              "MessageBody": "Forbidden",
              "StatusCode": "403",
            },
            "Type": "fixed-response",
          },
        ],
        "LoadBalancerArn": {
          "Ref": "PublicAlb84330974",
        },
        "Port": 80,
        "Protocol": "HTTP",
      },
      "Type": "AWS::ElasticLoadBalancingV2::Listener",
    },
    "S3GatewayEndpointE8BAF1BC": {
      "Properties": {
        "RouteTableIds": [
          {
            "Fn::ImportValue": "Sps-Network-prod:ExportsOutputRefVpcprivateSubnet1RouteTable1979EACBE1BD1DD4",
          },
          {
            "Fn::ImportValue": "Sps-Network-prod:ExportsOutputRefVpcprivateSubnet2RouteTable4D0FFC8C36E62A4A",
          },
        ],
        "ServiceName": {
          "Fn::Join": [
            "",
            [
              "com.amazonaws.",
              {
                "Ref": "AWS::Region",
              },
              ".s3",
            ],
          ],
        },
        "VpcEndpointType": "Gateway",
        "VpcId": {
          "Fn::ImportValue": "Sps-Network-prod:ExportsOutputRefVpc8378EB38272D6E3A",
        },
      },
      "Type": "AWS::EC2::VPCEndpoint",
    },
    "SecretsManagerEndpoint5E83C66B": {
      "Properties": {
        "PrivateDnsEnabled": true,
        "SecurityGroupIds": [
          {
            "Fn::GetAtt": [
              "VpcEndpointSecurityGroup02EA44AC",
              "GroupId",
            ],
          },
        ],
        "ServiceName": "com.amazonaws.us-east-1.secretsmanager",
        "SubnetIds": [
          {
            "Fn::ImportValue": "Sps-Network-prod:ExportsOutputRefVpcprivateSubnet1SubnetCEAD37168693D373",
          },
          {
            "Fn::ImportValue": "Sps-Network-prod:ExportsOutputRefVpcprivateSubnet2Subnet2DE7549CDF5ACE3D",
          },
        ],
        "VpcEndpointType": "Interface",
        "VpcId": {
          "Fn::ImportValue": "Sps-Network-prod:ExportsOutputRefVpc8378EB38272D6E3A",
        },
      },
      "Type": "AWS::EC2::VPCEndpoint",
    },
    "TaskExecutionRole250D2532": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "ecs-tasks.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "Description": "SPS ECS task-execution role (prod). Pulls images, injects secrets, writes logs.",
        "RoleName": "sps-task-exec-prod",
      },
      "Type": "AWS::IAM::Role",
    },
    "TaskExecutionRoleDefaultPolicyA84DD1B0": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "ecr:GetAuthorizationToken",
              "Effect": "Allow",
              "Resource": "*",
            },
            {
              "Action": [
                "ecr:BatchCheckLayerAvailability",
                "ecr:GetDownloadUrlForLayer",
                "ecr:BatchGetImage",
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::GetAtt": [
                  "EcrRepository4D7B3EE1",
                  "Arn",
                ],
              },
            },
            {
              "Action": "secretsmanager:GetSecretValue",
              "Effect": "Allow",
              "Resource": [
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":secretsmanager:us-east-1:123456789012:secret:scholars/prod/db/app-rw",
                    ],
                  ],
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":secretsmanager:us-east-1:123456789012:secret:scholars/prod/db/app-ro",
                    ],
                  ],
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":secretsmanager:us-east-1:123456789012:secret:scholars/prod/opensearch/app",
                    ],
                  ],
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":secretsmanager:us-east-1:123456789012:secret:scholars/prod/revalidate-token",
                    ],
                  ],
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":secretsmanager:us-east-1:123456789012:secret:scholars/saml-sp/prod/private-key",
                    ],
                  ],
                },
              ],
            },
            {
              "Action": [
                "logs:CreateLogStream",
                "logs:PutLogEvents",
              ],
              "Effect": "Allow",
              "Resource": [
                {
                  "Fn::GetAtt": [
                    "AppLogGroup7D8CD952",
                    "Arn",
                  ],
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      {
                        "Fn::GetAtt": [
                          "AppLogGroup7D8CD952",
                          "Arn",
                        ],
                      },
                      ":*",
                    ],
                  ],
                },
                {
                  "Fn::GetAtt": [
                    "MigrationLogGroupFD140541",
                    "Arn",
                  ],
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      {
                        "Fn::GetAtt": [
                          "MigrationLogGroupFD140541",
                          "Arn",
                        ],
                      },
                      ":*",
                    ],
                  ],
                },
                {
                  "Fn::GetAtt": [
                    "OtelCollectorLogGroup0FD207F7",
                    "Arn",
                  ],
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      {
                        "Fn::GetAtt": [
                          "OtelCollectorLogGroup0FD207F7",
                          "Arn",
                        ],
                      },
                      ":*",
                    ],
                  ],
                },
              ],
            },
            {
              "Action": [
                "logs:CreateLogStream",
                "logs:PutLogEvents",
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::GetAtt": [
                  "AppLogGroup7D8CD952",
                  "Arn",
                ],
              },
            },
            {
              "Action": [
                "secretsmanager:GetSecretValue",
                "secretsmanager:DescribeSecret",
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:",
                    {
                      "Ref": "AWS::Partition",
                    },
                    ":secretsmanager:us-east-1:123456789012:secret:scholars/prod/db/app-rw-??????",
                  ],
                ],
              },
            },
            {
              "Action": [
                "secretsmanager:GetSecretValue",
                "secretsmanager:DescribeSecret",
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:",
                    {
                      "Ref": "AWS::Partition",
                    },
                    ":secretsmanager:us-east-1:123456789012:secret:scholars/prod/db/app-ro-??????",
                  ],
                ],
              },
            },
            {
              "Action": [
                "secretsmanager:GetSecretValue",
                "secretsmanager:DescribeSecret",
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:",
                    {
                      "Ref": "AWS::Partition",
                    },
                    ":secretsmanager:us-east-1:123456789012:secret:scholars/prod/opensearch/app-??????",
                  ],
                ],
              },
            },
            {
              "Action": [
                "secretsmanager:GetSecretValue",
                "secretsmanager:DescribeSecret",
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:",
                    {
                      "Ref": "AWS::Partition",
                    },
                    ":secretsmanager:us-east-1:123456789012:secret:scholars/prod/revalidate-token-??????",
                  ],
                ],
              },
            },
            {
              "Action": [
                "secretsmanager:GetSecretValue",
                "secretsmanager:DescribeSecret",
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:",
                    {
                      "Ref": "AWS::Partition",
                    },
                    ":secretsmanager:us-east-1:123456789012:secret:scholars/saml-sp/prod/private-key-??????",
                  ],
                ],
              },
            },
            {
              "Action": [
                "logs:CreateLogStream",
                "logs:PutLogEvents",
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::GetAtt": [
                  "OtelCollectorLogGroup0FD207F7",
                  "Arn",
                ],
              },
            },
            {
              "Action": [
                "logs:CreateLogStream",
                "logs:PutLogEvents",
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::GetAtt": [
                  "MigrationLogGroupFD140541",
                  "Arn",
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "TaskExecutionRoleDefaultPolicyA84DD1B0",
        "Roles": [
          {
            "Ref": "TaskExecutionRole250D2532",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "TaskRole30FC0FBB": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "ecs-tasks.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "Description": "SPS ECS task role (prod). Application runtime identity; X-Ray write only.",
        "RoleName": "sps-task-prod",
      },
      "Type": "AWS::IAM::Role",
    },
    "TaskRoleXrayPolicyBA24E3D0": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "xray:PutTraceSegments",
              "Effect": "Allow",
              "Resource": "*",
            },
            {
              "Action": "xray:PutTelemetryRecords",
              "Effect": "Allow",
              "Resource": "*",
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "sps-task-prod-xray",
        "Roles": [
          {
            "Ref": "TaskRole30FC0FBB",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "VpcEndpointSecurityGroup02EA44AC": {
      "Properties": {
        "GroupDescription": "SPS VPC interface endpoints (prod) -- HTTPS from app + ETL SGs.",
        "SecurityGroupEgress": [
          {
            "CidrIp": "255.255.255.255/32",
            "Description": "Disallow all traffic",
            "FromPort": 252,
            "IpProtocol": "icmp",
            "ToPort": 86,
          },
        ],
        "SecurityGroupIngress": [
          {
            "Description": "App SG to interface endpoints HTTPS (prod)",
            "FromPort": 443,
            "IpProtocol": "tcp",
            "SourceSecurityGroupId": {
              "Fn::ImportValue": "Sps-Network-prod:ExportsOutputFnGetAttAppSecurityGroupC396D536GroupId4ECD26A6",
            },
            "ToPort": 443,
          },
          {
            "Description": "ETL SG to interface endpoints HTTPS (prod)",
            "FromPort": 443,
            "IpProtocol": "tcp",
            "SourceSecurityGroupId": {
              "Fn::ImportValue": "Sps-Network-prod:ExportsOutputFnGetAttEtlSecurityGroup5D059AE5GroupId2BECA072",
            },
            "ToPort": 443,
          },
        ],
        "VpcId": {
          "Fn::ImportValue": "Sps-Network-prod:ExportsOutputRefVpc8378EB38272D6E3A",
        },
      },
      "Type": "AWS::EC2::SecurityGroup",
    },
  },
  "Rules": {
    "CheckBootstrapVersion": {
      "Assertions": [
        {
          "Assert": {
            "Fn::Not": [
              {
                "Fn::Contains": [
                  [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5",
                  ],
                  {
                    "Ref": "BootstrapVersion",
                  },
                ],
              },
            ],
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
        },
      ],
    },
  },
}
`;

exports[`AppStack staging matches the snapshot 1`] = `
{
  "Outputs": {
    "DeployRoleArn": {
      "Description": "SPS GitHub Actions deploy role ARN",
      "Value": {
        "Fn::GetAtt": [
          "DeployRole885297C3",
          "Arn",
        ],
      },
    },
    "EcrRepoUri": {
      "Description": "SPS ECR repository URI",
      "Value": {
        "Fn::Join": [
          "",
          [
            {
              "Fn::Select": [
                4,
                {
                  "Fn::Split": [
                    ":",
                    {
                      "Fn::GetAtt": [
                        "EcrRepository4D7B3EE1",
                        "Arn",
                      ],
                    },
                  ],
                },
              ],
            },
            ".dkr.ecr.",
            {
              "Fn::Select": [
                3,
                {
                  "Fn::Split": [
                    ":",
                    {
                      "Fn::GetAtt": [
                        "EcrRepository4D7B3EE1",
                        "Arn",
                      ],
                    },
                  ],
                },
              ],
            },
            ".",
            {
              "Ref": "AWS::URLSuffix",
            },
            "/",
            {
              "Ref": "EcrRepository4D7B3EE1",
            },
          ],
        ],
      },
    },
    "EcsAppTaskFamily": {
      "Description": "SPS app task definition family",
      "Value": "sps-app-staging",
    },
    "EcsClusterName": {
      "Description": "SPS ECS cluster name",
      "Value": {
        "Ref": "EcsCluster97242B84",
      },
    },
    "EcsMigrationTaskFamily": {
      "Description": "SPS one-shot prisma migrate deploy task family",
      "Value": "sps-migrate-staging",
    },
    "EcsServiceName": {
      "Description": "SPS ECS service name",
      "Value": {
        "Fn::GetAtt": [
          "EcsService81FC6EF6",
          "Name",
        ],
      },
    },
    "InternalAlbDns": {
      "Description": "SPS internal ALB DNS name (consumed by EtlStack)",
      "Value": {
        "Fn::GetAtt": [
          "InternalAlb58CEEAE8",
          "DNSName",
        ],
      },
    },
    "InternalAlbSecurityGroupId": {
      "Description": "SPS internal ALB security group id (consumed by EtlStack ingress).",
      "Export": {
        "Name": "Sps-App-staging-InternalAlbSecurityGroupId",
      },
      "Value": {
        "Fn::GetAtt": [
          "InternalAlbSecurityGroup32D71C5A",
          "GroupId",
        ],
      },
    },
    "PublicAlbDns": {
      "Description": "SPS public ALB DNS name (consumed by EdgeStack)",
      "Value": {
        "Fn::GetAtt": [
          "PublicAlb84330974",
          "DNSName",
        ],
      },
    },
  },
  "Parameters": {
    "BootstrapVersion": {
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": {
    "AppIngressFromInternalAlb": {
      "Properties": {
        "Description": "Internal ALB to SPS app tasks on container port (staging)",
        "FromPort": 3000,
        "GroupId": {
          "Fn::ImportValue": "Sps-Network-staging:ExportsOutputFnGetAttAppSecurityGroupC396D536GroupId4ECD26A6",
        },
        "IpProtocol": "tcp",
        "SourceSecurityGroupId": {
          "Fn::GetAtt": [
            "InternalAlbSecurityGroup32D71C5A",
            "GroupId",
          ],
        },
        "ToPort": 3000,
      },
      "Type": "AWS::EC2::SecurityGroupIngress",
    },
    "AppIngressFromPublicAlb": {
      "Properties": {
        "Description": "Public ALB to SPS app tasks on container port (staging)",
        "FromPort": 3000,
        "GroupId": {
          "Fn::ImportValue": "Sps-Network-staging:ExportsOutputFnGetAttAppSecurityGroupC396D536GroupId4ECD26A6",
        },
        "IpProtocol": "tcp",
        "SourceSecurityGroupId": {
          "Fn::ImportValue": "Sps-Network-staging:ExportsOutputFnGetAttAlbSecurityGroup86A59E99GroupIdE3A37BC7",
        },
        "ToPort": 3000,
      },
      "Type": "AWS::EC2::SecurityGroupIngress",
    },
    "AppLogGroup7D8CD952": {
      "DeletionPolicy": "Retain",
      "Properties": {
        "LogGroupName": "/aws/ecs/sps-app-staging",
        "RetentionInDays": 30,
      },
      "Type": "AWS::Logs::LogGroup",
      "UpdateReplacePolicy": "Retain",
    },
    "AppTargetGroup3D716DB6": {
      "Properties": {
        "HealthCheckIntervalSeconds": 30,
        "HealthCheckPath": "/api/health",
        "HealthCheckTimeoutSeconds": 5,
        "HealthyThresholdCount": 2,
        "Name": "sps-tg-app-staging",
        "Port": 3000,
        "Protocol": "HTTP",
        "TargetGroupAttributes": [
          {
            "Key": "deregistration_delay.timeout_seconds",
            "Value": "30",
          },
          {
            "Key": "stickiness.enabled",
            "Value": "false",
          },
        ],
        "TargetType": "ip",
        "UnhealthyThresholdCount": 3,
        "VpcId": {
          "Fn::ImportValue": "Sps-Network-staging:ExportsOutputRefVpc8378EB38272D6E3A",
        },
      },
      "Type": "AWS::ElasticLoadBalancingV2::TargetGroup",
    },
    "AppTaskDefinitionCBC902A9": {
      "Properties": {
        "ContainerDefinitions": [
          {
            "Environment": [
              {
                "Name": "NODE_ENV",
                "Value": "production",
              },
              {
                "Name": "PORT",
                "Value": "3000",
              },
              {
                "Name": "OTEL_SERVICE_NAME",
                "Value": "sps-app-staging",
              },
              {
                "Name": "OTEL_EXPORTER_OTLP_ENDPOINT",
                "Value": "http://localhost:4318",
              },
              {
                "Name": "OTEL_PROPAGATORS",
                "Value": "tracecontext,xray",
              },
              {
                "Name": "SPS_ENV",
                "Value": "staging",
              },
            ],
            "Essential": true,
            "Image": {
              "Fn::Join": [
                "",
                [
                  {
                    "Fn::Select": [
                      4,
                      {
                        "Fn::Split": [
                          ":",
                          {
                            "Fn::GetAtt": [
                              "EcrRepository4D7B3EE1",
                              "Arn",
                            ],
                          },
                        ],
                      },
                    ],
                  },
                  ".dkr.ecr.",
                  {
                    "Fn::Select": [
                      3,
                      {
                        "Fn::Split": [
                          ":",
                          {
                            "Fn::GetAtt": [
                              "EcrRepository4D7B3EE1",
                              "Arn",
                            ],
                          },
                        ],
                      },
                    ],
                  },
                  ".",
                  {
                    "Ref": "AWS::URLSuffix",
                  },
                  "/",
                  {
                    "Ref": "EcrRepository4D7B3EE1",
                  },
                  ":latest",
                ],
              ],
            },
            "LogConfiguration": {
              "LogDriver": "awslogs",
              "Options": {
                "awslogs-group": {
                  "Ref": "AppLogGroup7D8CD952",
                },
                "awslogs-region": "us-east-1",
                "awslogs-stream-prefix": "app",
              },
            },
            "Name": "app",
            "PortMappings": [
              {
                "ContainerPort": 3000,
                "Protocol": "tcp",
              },
            ],
            "Secrets": [
              {
                "Name": "DATABASE_URL",
                "ValueFrom": {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":secretsmanager:us-east-1:123456789012:secret:scholars/staging/db/app-rw",
                    ],
                  ],
                },
              },
              {
                "Name": "DATABASE_URL_RO",
                "ValueFrom": {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":secretsmanager:us-east-1:123456789012:secret:scholars/staging/db/app-ro",
                    ],
                  ],
                },
              },
              {
                "Name": "OPENSEARCH_USER",
                "ValueFrom": {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":secretsmanager:us-east-1:123456789012:secret:scholars/staging/opensearch/app:username::",
                    ],
                  ],
                },
              },
              {
                "Name": "OPENSEARCH_PASS",
                "ValueFrom": {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":secretsmanager:us-east-1:123456789012:secret:scholars/staging/opensearch/app:password::",
                    ],
                  ],
                },
              },
              {
                "Name": "REVALIDATE_TOKEN",
                "ValueFrom": {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":secretsmanager:us-east-1:123456789012:secret:scholars/staging/revalidate-token",
                    ],
                  ],
                },
              },
              {
                "Name": "SAML_SP_PRIVATE_KEY",
                "ValueFrom": {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":secretsmanager:us-east-1:123456789012:secret:scholars/saml-sp/staging/private-key",
                    ],
                  ],
                },
              },
            ],
          },
          {
            "Command": [
              "--config=env:AOT_CONFIG_CONTENT",
            ],
            "Environment": [
              {
                "Name": "AOT_CONFIG_CONTENT",
                "Value": "# ADOT collector configuration for SPS app tasks.
#
# Pipeline shape: OTLP/HTTP receiver -> memory_limiter -> tail_sampling ->
# batch -> awsxray exporter. The tail_sampling processor is the load-bearing
# piece -- issue #123's "5% baseline + 100% on errors" cannot be delivered
# by an SDK-side head sampler (NotSampled decisions can't be reversed once
# the span is dropped), so the promotion happens here after the trace has
# ended and its status is known.
#
# Drops happen before the awsxray exporter, so the X-Ray bill tracks the
# kept-trace rate (~5% baseline + every error + every >1500ms trace),
# not the SDK's 100% recording rate.
#
# Tunable in place: edit this file + cdk deploy --exclusively Sps-App-<env>.
# No app-image rebuild required because the file is baked into the
# collector container via the CDK Asset upload pattern (see app-stack.ts).

receivers:
  otlp:
    protocols:
      http:
        endpoint: 0.0.0.0:4318

processors:
  # Drop incoming OTLP if the collector is over a soft memory limit; required
  # in front of tail_sampling because the latter buffers up to num_traces.
  memory_limiter:
    check_interval: 1s
    limit_percentage: 80
    spike_limit_percentage: 25

  tail_sampling:
    decision_wait: 10s
    num_traces: 50000
    policies:
      - name: errors
        type: status_code
        status_code:
          status_codes: [ERROR]
      - name: slow
        type: latency
        latency:
          threshold_ms: 1500
      - name: baseline
        type: probabilistic
        probabilistic:
          sampling_percentage: 5

  batch:
    timeout: 5s
    send_batch_size: 50

exporters:
  awsxray:
    # Region resolved from the ECS task metadata; no need to hard-code.

service:
  pipelines:
    traces:
      receivers: [otlp]
      processors: [memory_limiter, tail_sampling, batch]
      exporters: [awsxray]
",
              },
            ],
            "Essential": false,
            "Image": "public.ecr.aws/aws-observability/aws-otel-collector@sha256:c7e36a5b6ebd0a8d2a9e1f4b6c8d5a7e3b9f2c1d4e6a8b0c2d4e6f8a0b2c4d6e",
            "LogConfiguration": {
              "LogDriver": "awslogs",
              "Options": {
                "awslogs-group": {
                  "Ref": "OtelCollectorLogGroup0FD207F7",
                },
                "awslogs-region": "us-east-1",
                "awslogs-stream-prefix": "otel",
              },
            },
            "Name": "otel-collector",
          },
        ],
        "Cpu": "512",
        "ExecutionRoleArn": {
          "Fn::GetAtt": [
            "TaskExecutionRole250D2532",
            "Arn",
          ],
        },
        "Family": "sps-app-staging",
        "Memory": "1024",
        "NetworkMode": "awsvpc",
        "RequiresCompatibilities": [
          "FARGATE",
        ],
        "TaskRoleArn": {
          "Fn::GetAtt": [
            "TaskRole30FC0FBB",
            "Arn",
          ],
        },
      },
      "Type": "AWS::ECS::TaskDefinition",
    },
    "CustomAWSCDKOpenIdConnectProviderCustomResourceProviderHandlerF2C543E0": {
      "DependsOn": [
        "CustomAWSCDKOpenIdConnectProviderCustomResourceProviderRole517FED65",
      ],
      "Properties": {
        "Code": {
          "S3Bucket": "cdk-hnb659fds-assets-123456789012-us-east-1",
          "S3Key": "d75c48c9f82cde63e9bf414df335e84e8ac24f11eb34889be255b702aec71e50.zip",
        },
        "Handler": "__entrypoint__.handler",
        "MemorySize": 128,
        "Role": {
          "Fn::GetAtt": [
            "CustomAWSCDKOpenIdConnectProviderCustomResourceProviderRole517FED65",
            "Arn",
          ],
        },
        "Runtime": "nodejs22.x",
        "Timeout": 900,
      },
      "Type": "AWS::Lambda::Function",
    },
    "CustomAWSCDKOpenIdConnectProviderCustomResourceProviderRole517FED65": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Sub": "arn:\${AWS::Partition}:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
          },
        ],
        "Policies": [
          {
            "PolicyDocument": {
              "Statement": [
                {
                  "Action": [
                    "iam:CreateOpenIDConnectProvider",
                    "iam:DeleteOpenIDConnectProvider",
                    "iam:UpdateOpenIDConnectProviderThumbprint",
                    "iam:AddClientIDToOpenIDConnectProvider",
                    "iam:RemoveClientIDFromOpenIDConnectProvider",
                  ],
                  "Effect": "Allow",
                  "Resource": "*",
                },
              ],
              "Version": "2012-10-17",
            },
            "PolicyName": "Inline",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "DeployRole885297C3": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRoleWithWebIdentity",
              "Condition": {
                "StringEquals": {
                  "token.actions.githubusercontent.com:aud": "sts.amazonaws.com",
                },
                "StringLike": {
                  "token.actions.githubusercontent.com:sub": "repo:wcmc-its/Scholars-Profile-System:*",
                },
              },
              "Effect": "Allow",
              "Principal": {
                "Federated": {
                  "Ref": "GithubOidcProviderD8241A88",
                },
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "Description": "SPS GitHub Actions deploy role (staging). Assumed by the deploy workflow via OIDC.",
        "RoleName": "sps-deploy-staging",
      },
      "Type": "AWS::IAM::Role",
    },
    "DeployRoleDefaultPolicyDC930F96": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "ecr:GetAuthorizationToken",
              "Effect": "Allow",
              "Resource": "*",
            },
            {
              "Action": [
                "ecr:BatchCheckLayerAvailability",
                "ecr:CompleteLayerUpload",
                "ecr:InitiateLayerUpload",
                "ecr:PutImage",
                "ecr:UploadLayerPart",
                "ecr:BatchGetImage",
                "ecr:GetDownloadUrlForLayer",
                "ecr:DescribeImages",
                "ecr:DescribeRepositories",
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::GetAtt": [
                  "EcrRepository4D7B3EE1",
                  "Arn",
                ],
              },
            },
            {
              "Action": "ecs:RunTask",
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:",
                    {
                      "Ref": "AWS::Partition",
                    },
                    ":ecs:us-east-1:123456789012:task-definition/sps-migrate-staging:*",
                  ],
                ],
              },
            },
            {
              "Action": [
                "ecs:UpdateService",
                "ecs:DescribeServices",
              ],
              "Effect": "Allow",
              "Resource": {
                "Ref": "EcsService81FC6EF6",
              },
            },
            {
              "Action": [
                "ecs:DescribeTasks",
                "ecs:ListTasks",
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:",
                    {
                      "Ref": "AWS::Partition",
                    },
                    ":ecs:us-east-1:123456789012:task/",
                    {
                      "Ref": "EcsCluster97242B84",
                    },
                    "/*",
                  ],
                ],
              },
            },
            {
              "Action": "iam:PassRole",
              "Condition": {
                "StringEquals": {
                  "iam:PassedToService": "ecs-tasks.amazonaws.com",
                },
              },
              "Effect": "Allow",
              "Resource": [
                {
                  "Fn::GetAtt": [
                    "TaskExecutionRole250D2532",
                    "Arn",
                  ],
                },
                {
                  "Fn::GetAtt": [
                    "TaskRole30FC0FBB",
                    "Arn",
                  ],
                },
              ],
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "DeployRoleDefaultPolicyDC930F96",
        "Roles": [
          {
            "Ref": "DeployRole885297C3",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "EcrRepository4D7B3EE1": {
      "DeletionPolicy": "Retain",
      "Properties": {
        "ImageScanningConfiguration": {
          "ScanOnPush": true,
        },
        "LifecyclePolicy": {
          "LifecyclePolicyText": "{"rules":[{"rulePriority":1,"description":"Keep the last 30 tagged images","selection":{"tagStatus":"tagged","tagPatternList":["*"],"countType":"imageCountMoreThan","countNumber":30},"action":{"type":"expire"}},{"rulePriority":2,"description":"Expire untagged images after 7 days","selection":{"tagStatus":"untagged","countType":"sinceImagePushed","countNumber":7,"countUnit":"days"},"action":{"type":"expire"}}]}",
        },
        "RepositoryName": "scholars-app-staging",
      },
      "Type": "AWS::ECR::Repository",
      "UpdateReplacePolicy": "Retain",
    },
    "EcsCluster97242B84": {
      "Properties": {
        "ClusterName": "sps-cluster-staging",
        "ClusterSettings": [
          {
            "Name": "containerInsights",
            "Value": "enabled",
          },
        ],
      },
      "Type": "AWS::ECS::Cluster",
    },
    "EcsService81FC6EF6": {
      "DependsOn": [
        "AppTargetGroup3D716DB6",
        "InternalAlbInternalHttpListener9436A291",
        "OriginVerifiedForwardC0422D52",
        "PublicAlbPublicHttpListener8CAA0E91",
        "TaskRole30FC0FBB",
      ],
      "Properties": {
        "Cluster": {
          "Ref": "EcsCluster97242B84",
        },
        "DeploymentConfiguration": {
          "Alarms": {
            "AlarmNames": [],
            "Enable": false,
            "Rollback": false,
          },
          "DeploymentCircuitBreaker": {
            "Enable": true,
            "Rollback": true,
          },
          "MaximumPercent": 200,
          "MinimumHealthyPercent": 100,
        },
        "DeploymentController": {
          "Type": "ECS",
        },
        "DesiredCount": 1,
        "EnableECSManagedTags": false,
        "EnableExecuteCommand": false,
        "LaunchType": "FARGATE",
        "LoadBalancers": [
          {
            "ContainerName": "app",
            "ContainerPort": 3000,
            "TargetGroupArn": {
              "Ref": "AppTargetGroup3D716DB6",
            },
          },
        ],
        "NetworkConfiguration": {
          "AwsvpcConfiguration": {
            "AssignPublicIp": "DISABLED",
            "SecurityGroups": [
              {
                "Fn::ImportValue": "Sps-Network-staging:ExportsOutputFnGetAttAppSecurityGroupC396D536GroupId4ECD26A6",
              },
            ],
            "Subnets": [
              {
                "Fn::ImportValue": "Sps-Network-staging:ExportsOutputRefVpcprivateSubnet1SubnetCEAD37168693D373",
              },
              {
                "Fn::ImportValue": "Sps-Network-staging:ExportsOutputRefVpcprivateSubnet2Subnet2DE7549CDF5ACE3D",
              },
            ],
          },
        },
        "ServiceName": "sps-app-staging",
        "TaskDefinition": {
          "Ref": "AppTaskDefinitionCBC902A9",
        },
      },
      "Type": "AWS::ECS::Service",
    },
    "GithubOidcProviderD8241A88": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "ClientIDList": [
          "sts.amazonaws.com",
        ],
        "CodeHash": "d75c48c9f82cde63e9bf414df335e84e8ac24f11eb34889be255b702aec71e50",
        "RejectUnauthorized": false,
        "ServiceToken": {
          "Fn::GetAtt": [
            "CustomAWSCDKOpenIdConnectProviderCustomResourceProviderHandlerF2C543E0",
            "Arn",
          ],
        },
        "Url": "https://token.actions.githubusercontent.com",
      },
      "Type": "Custom::AWSCDKOpenIdConnectProvider",
      "UpdateReplacePolicy": "Delete",
    },
    "InternalAlb58CEEAE8": {
      "Properties": {
        "LoadBalancerAttributes": [
          {
            "Key": "deletion_protection.enabled",
            "Value": "false",
          },
        ],
        "Name": "sps-internal-staging",
        "Scheme": "internal",
        "SecurityGroups": [
          {
            "Fn::GetAtt": [
              "InternalAlbSecurityGroup32D71C5A",
              "GroupId",
            ],
          },
        ],
        "Subnets": [
          {
            "Fn::ImportValue": "Sps-Network-staging:ExportsOutputRefVpcprivateSubnet1SubnetCEAD37168693D373",
          },
          {
            "Fn::ImportValue": "Sps-Network-staging:ExportsOutputRefVpcprivateSubnet2Subnet2DE7549CDF5ACE3D",
          },
        ],
        "Type": "application",
      },
      "Type": "AWS::ElasticLoadBalancingV2::LoadBalancer",
    },
    "InternalAlbInternalHttpListener9436A291": {
      "Properties": {
        "DefaultActions": [
          {
            "TargetGroupArn": {
              "Ref": "AppTargetGroup3D716DB6",
            },
            "Type": "forward",
          },
        ],
        "LoadBalancerArn": {
          "Ref": "InternalAlb58CEEAE8",
        },
        "Port": 80,
        "Protocol": "HTTP",
      },
      "Type": "AWS::ElasticLoadBalancingV2::Listener",
    },
    "InternalAlbSecurityGroup32D71C5A": {
      "Properties": {
        "GroupDescription": "SPS internal ALB (staging) -- intra-VPC /api/revalidate ingress.",
        "SecurityGroupEgress": [
          {
            "CidrIp": "0.0.0.0/0",
            "Description": "Allow all outbound traffic by default",
            "IpProtocol": "-1",
          },
        ],
        "SecurityGroupIngress": [
          {
            "CidrIp": "0.0.0.0/0",
            "Description": "Allow from anyone on port 80",
            "FromPort": 80,
            "IpProtocol": "tcp",
            "ToPort": 80,
          },
        ],
        "VpcId": {
          "Fn::ImportValue": "Sps-Network-staging:ExportsOutputRefVpc8378EB38272D6E3A",
        },
      },
      "Type": "AWS::EC2::SecurityGroup",
    },
    "MigrationLogGroupFD140541": {
      "DeletionPolicy": "Retain",
      "Properties": {
        "LogGroupName": "/aws/ecs/sps-migrate-staging",
        "RetentionInDays": 30,
      },
      "Type": "AWS::Logs::LogGroup",
      "UpdateReplacePolicy": "Retain",
    },
    "MigrationTaskDefinitionE89B136E": {
      "Properties": {
        "ContainerDefinitions": [
          {
            "EntryPoint": [
              "npx",
              "prisma",
              "migrate",
              "deploy",
            ],
            "Essential": true,
            "Image": {
              "Fn::Join": [
                "",
                [
                  {
                    "Fn::Select": [
                      4,
                      {
                        "Fn::Split": [
                          ":",
                          {
                            "Fn::GetAtt": [
                              "EcrRepository4D7B3EE1",
                              "Arn",
                            ],
                          },
                        ],
                      },
                    ],
                  },
                  ".dkr.ecr.",
                  {
                    "Fn::Select": [
                      3,
                      {
                        "Fn::Split": [
                          ":",
                          {
                            "Fn::GetAtt": [
                              "EcrRepository4D7B3EE1",
                              "Arn",
                            ],
                          },
                        ],
                      },
                    ],
                  },
                  ".",
                  {
                    "Ref": "AWS::URLSuffix",
                  },
                  "/",
                  {
                    "Ref": "EcrRepository4D7B3EE1",
                  },
                  ":latest",
                ],
              ],
            },
            "LogConfiguration": {
              "LogDriver": "awslogs",
              "Options": {
                "awslogs-group": {
                  "Ref": "MigrationLogGroupFD140541",
                },
                "awslogs-region": "us-east-1",
                "awslogs-stream-prefix": "migrate",
              },
            },
            "Name": "migrate",
            "Secrets": [
              {
                "Name": "DATABASE_URL",
                "ValueFrom": {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":secretsmanager:us-east-1:123456789012:secret:scholars/staging/db/app-rw",
                    ],
                  ],
                },
              },
            ],
          },
        ],
        "Cpu": "512",
        "ExecutionRoleArn": {
          "Fn::GetAtt": [
            "TaskExecutionRole250D2532",
            "Arn",
          ],
        },
        "Family": "sps-migrate-staging",
        "Memory": "1024",
        "NetworkMode": "awsvpc",
        "RequiresCompatibilities": [
          "FARGATE",
        ],
        "TaskRoleArn": {
          "Fn::GetAtt": [
            "TaskRole30FC0FBB",
            "Arn",
          ],
        },
      },
      "Type": "AWS::ECS::TaskDefinition",
    },
    "OriginVerifiedForwardC0422D52": {
      "Properties": {
        "Actions": [
          {
            "TargetGroupArn": {
              "Ref": "AppTargetGroup3D716DB6",
            },
            "Type": "forward",
          },
        ],
        "Conditions": [
          {
            "Field": "http-header",
            "HttpHeaderConfig": {
              "HttpHeaderName": "X-Origin-Verify",
              "Values": [
                "{{resolve:secretsmanager:scholars/staging/edge/origin-shared-secret:SecretString:::}}",
              ],
            },
          },
        ],
        "ListenerArn": {
          "Ref": "PublicAlbPublicHttpListener8CAA0E91",
        },
        "Priority": 1,
      },
      "Type": "AWS::ElasticLoadBalancingV2::ListenerRule",
    },
    "OtelCollectorLogGroup0FD207F7": {
      "DeletionPolicy": "Retain",
      "Properties": {
        "LogGroupName": "/aws/ecs/sps-otel-staging",
        "RetentionInDays": 30,
      },
      "Type": "AWS::Logs::LogGroup",
      "UpdateReplacePolicy": "Retain",
    },
    "PublicAlb84330974": {
      "Properties": {
        "LoadBalancerAttributes": [
          {
            "Key": "deletion_protection.enabled",
            "Value": "false",
          },
        ],
        "Name": "sps-public-staging",
        "Scheme": "internet-facing",
        "SecurityGroups": [
          {
            "Fn::ImportValue": "Sps-Network-staging:ExportsOutputFnGetAttAlbSecurityGroup86A59E99GroupIdE3A37BC7",
          },
        ],
        "Subnets": [
          {
            "Fn::ImportValue": "Sps-Network-staging:ExportsOutputRefVpcpublicSubnet1Subnet2BB74ED74EB42ADC",
          },
          {
            "Fn::ImportValue": "Sps-Network-staging:ExportsOutputRefVpcpublicSubnet2SubnetE34B022AC8BB6627",
          },
        ],
        "Type": "application",
      },
      "Type": "AWS::ElasticLoadBalancingV2::LoadBalancer",
    },
    "PublicAlbIngressFromInternet": {
      "Properties": {
        "CidrIp": "0.0.0.0/0",
        "Description": "Internet to SPS public ALB HTTP (staging) -- HTTPS lands with EdgeStack",
        "FromPort": 80,
        "GroupId": {
          "Fn::ImportValue": "Sps-Network-staging:ExportsOutputFnGetAttAlbSecurityGroup86A59E99GroupIdE3A37BC7",
        },
        "IpProtocol": "tcp",
        "ToPort": 80,
      },
      "Type": "AWS::EC2::SecurityGroupIngress",
    },
    "PublicAlbPublicHttpListener8CAA0E91": {
      "Properties": {
        "DefaultActions": [
          {
            "FixedResponseConfig": {
              "ContentType": "text/plain",
              "MessageBody": "Forbidden",
              "StatusCode": "403",
            },
            "Type": "fixed-response",
          },
        ],
        "LoadBalancerArn": {
          "Ref": "PublicAlb84330974",
        },
        "Port": 80,
        "Protocol": "HTTP",
      },
      "Type": "AWS::ElasticLoadBalancingV2::Listener",
    },
    "S3GatewayEndpointE8BAF1BC": {
      "Properties": {
        "RouteTableIds": [
          {
            "Fn::ImportValue": "Sps-Network-staging:ExportsOutputRefVpcprivateSubnet1RouteTable1979EACBE1BD1DD4",
          },
          {
            "Fn::ImportValue": "Sps-Network-staging:ExportsOutputRefVpcprivateSubnet2RouteTable4D0FFC8C36E62A4A",
          },
        ],
        "ServiceName": {
          "Fn::Join": [
            "",
            [
              "com.amazonaws.",
              {
                "Ref": "AWS::Region",
              },
              ".s3",
            ],
          ],
        },
        "VpcEndpointType": "Gateway",
        "VpcId": {
          "Fn::ImportValue": "Sps-Network-staging:ExportsOutputRefVpc8378EB38272D6E3A",
        },
      },
      "Type": "AWS::EC2::VPCEndpoint",
    },
    "SecretsManagerEndpoint5E83C66B": {
      "Properties": {
        "PrivateDnsEnabled": true,
        "SecurityGroupIds": [
          {
            "Fn::GetAtt": [
              "VpcEndpointSecurityGroup02EA44AC",
              "GroupId",
            ],
          },
        ],
        "ServiceName": "com.amazonaws.us-east-1.secretsmanager",
        "SubnetIds": [
          {
            "Fn::ImportValue": "Sps-Network-staging:ExportsOutputRefVpcprivateSubnet1SubnetCEAD37168693D373",
          },
          {
            "Fn::ImportValue": "Sps-Network-staging:ExportsOutputRefVpcprivateSubnet2Subnet2DE7549CDF5ACE3D",
          },
        ],
        "VpcEndpointType": "Interface",
        "VpcId": {
          "Fn::ImportValue": "Sps-Network-staging:ExportsOutputRefVpc8378EB38272D6E3A",
        },
      },
      "Type": "AWS::EC2::VPCEndpoint",
    },
    "TaskExecutionRole250D2532": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "ecs-tasks.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "Description": "SPS ECS task-execution role (staging). Pulls images, injects secrets, writes logs.",
        "RoleName": "sps-task-exec-staging",
      },
      "Type": "AWS::IAM::Role",
    },
    "TaskExecutionRoleDefaultPolicyA84DD1B0": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "ecr:GetAuthorizationToken",
              "Effect": "Allow",
              "Resource": "*",
            },
            {
              "Action": [
                "ecr:BatchCheckLayerAvailability",
                "ecr:GetDownloadUrlForLayer",
                "ecr:BatchGetImage",
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::GetAtt": [
                  "EcrRepository4D7B3EE1",
                  "Arn",
                ],
              },
            },
            {
              "Action": "secretsmanager:GetSecretValue",
              "Effect": "Allow",
              "Resource": [
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":secretsmanager:us-east-1:123456789012:secret:scholars/staging/db/app-rw",
                    ],
                  ],
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":secretsmanager:us-east-1:123456789012:secret:scholars/staging/db/app-ro",
                    ],
                  ],
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":secretsmanager:us-east-1:123456789012:secret:scholars/staging/opensearch/app",
                    ],
                  ],
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":secretsmanager:us-east-1:123456789012:secret:scholars/staging/revalidate-token",
                    ],
                  ],
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":secretsmanager:us-east-1:123456789012:secret:scholars/saml-sp/staging/private-key",
                    ],
                  ],
                },
              ],
            },
            {
              "Action": [
                "logs:CreateLogStream",
                "logs:PutLogEvents",
              ],
              "Effect": "Allow",
              "Resource": [
                {
                  "Fn::GetAtt": [
                    "AppLogGroup7D8CD952",
                    "Arn",
                  ],
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      {
                        "Fn::GetAtt": [
                          "AppLogGroup7D8CD952",
                          "Arn",
                        ],
                      },
                      ":*",
                    ],
                  ],
                },
                {
                  "Fn::GetAtt": [
                    "MigrationLogGroupFD140541",
                    "Arn",
                  ],
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      {
                        "Fn::GetAtt": [
                          "MigrationLogGroupFD140541",
                          "Arn",
                        ],
                      },
                      ":*",
                    ],
                  ],
                },
                {
                  "Fn::GetAtt": [
                    "OtelCollectorLogGroup0FD207F7",
                    "Arn",
                  ],
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      {
                        "Fn::GetAtt": [
                          "OtelCollectorLogGroup0FD207F7",
                          "Arn",
                        ],
                      },
                      ":*",
                    ],
                  ],
                },
              ],
            },
            {
              "Action": [
                "logs:CreateLogStream",
                "logs:PutLogEvents",
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::GetAtt": [
                  "AppLogGroup7D8CD952",
                  "Arn",
                ],
              },
            },
            {
              "Action": [
                "secretsmanager:GetSecretValue",
                "secretsmanager:DescribeSecret",
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:",
                    {
                      "Ref": "AWS::Partition",
                    },
                    ":secretsmanager:us-east-1:123456789012:secret:scholars/staging/db/app-rw-??????",
                  ],
                ],
              },
            },
            {
              "Action": [
                "secretsmanager:GetSecretValue",
                "secretsmanager:DescribeSecret",
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:",
                    {
                      "Ref": "AWS::Partition",
                    },
                    ":secretsmanager:us-east-1:123456789012:secret:scholars/staging/db/app-ro-??????",
                  ],
                ],
              },
            },
            {
              "Action": [
                "secretsmanager:GetSecretValue",
                "secretsmanager:DescribeSecret",
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:",
                    {
                      "Ref": "AWS::Partition",
                    },
                    ":secretsmanager:us-east-1:123456789012:secret:scholars/staging/opensearch/app-??????",
                  ],
                ],
              },
            },
            {
              "Action": [
                "secretsmanager:GetSecretValue",
                "secretsmanager:DescribeSecret",
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:",
                    {
                      "Ref": "AWS::Partition",
                    },
                    ":secretsmanager:us-east-1:123456789012:secret:scholars/staging/revalidate-token-??????",
                  ],
                ],
              },
            },
            {
              "Action": [
                "secretsmanager:GetSecretValue",
                "secretsmanager:DescribeSecret",
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:",
                    {
                      "Ref": "AWS::Partition",
                    },
                    ":secretsmanager:us-east-1:123456789012:secret:scholars/saml-sp/staging/private-key-??????",
                  ],
                ],
              },
            },
            {
              "Action": [
                "logs:CreateLogStream",
                "logs:PutLogEvents",
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::GetAtt": [
                  "OtelCollectorLogGroup0FD207F7",
                  "Arn",
                ],
              },
            },
            {
              "Action": [
                "logs:CreateLogStream",
                "logs:PutLogEvents",
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::GetAtt": [
                  "MigrationLogGroupFD140541",
                  "Arn",
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "TaskExecutionRoleDefaultPolicyA84DD1B0",
        "Roles": [
          {
            "Ref": "TaskExecutionRole250D2532",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "TaskRole30FC0FBB": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "ecs-tasks.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "Description": "SPS ECS task role (staging). Application runtime identity; X-Ray write only.",
        "RoleName": "sps-task-staging",
      },
      "Type": "AWS::IAM::Role",
    },
    "TaskRoleXrayPolicyBA24E3D0": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "xray:PutTraceSegments",
              "Effect": "Allow",
              "Resource": "*",
            },
            {
              "Action": "xray:PutTelemetryRecords",
              "Effect": "Allow",
              "Resource": "*",
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "sps-task-staging-xray",
        "Roles": [
          {
            "Ref": "TaskRole30FC0FBB",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "VpcEndpointSecurityGroup02EA44AC": {
      "Properties": {
        "GroupDescription": "SPS VPC interface endpoints (staging) -- HTTPS from app + ETL SGs.",
        "SecurityGroupEgress": [
          {
            "CidrIp": "255.255.255.255/32",
            "Description": "Disallow all traffic",
            "FromPort": 252,
            "IpProtocol": "icmp",
            "ToPort": 86,
          },
        ],
        "SecurityGroupIngress": [
          {
            "Description": "App SG to interface endpoints HTTPS (staging)",
            "FromPort": 443,
            "IpProtocol": "tcp",
            "SourceSecurityGroupId": {
              "Fn::ImportValue": "Sps-Network-staging:ExportsOutputFnGetAttAppSecurityGroupC396D536GroupId4ECD26A6",
            },
            "ToPort": 443,
          },
          {
            "Description": "ETL SG to interface endpoints HTTPS (staging)",
            "FromPort": 443,
            "IpProtocol": "tcp",
            "SourceSecurityGroupId": {
              "Fn::ImportValue": "Sps-Network-staging:ExportsOutputFnGetAttEtlSecurityGroup5D059AE5GroupId2BECA072",
            },
            "ToPort": 443,
          },
        ],
        "VpcId": {
          "Fn::ImportValue": "Sps-Network-staging:ExportsOutputRefVpc8378EB38272D6E3A",
        },
      },
      "Type": "AWS::EC2::SecurityGroup",
    },
  },
  "Rules": {
    "CheckBootstrapVersion": {
      "Assertions": [
        {
          "Assert": {
            "Fn::Not": [
              {
                "Fn::Contains": [
                  [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5",
                  ],
                  {
                    "Ref": "BootstrapVersion",
                  },
                ],
              },
            ],
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
        },
      ],
    },
  },
}
`;
